# ACTSTracking

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: format.yaml
ACTSTracking/: ACTSCKFTrackingProc.hxx  ACTSDetectorLoaderProc.hxx  ACTSDuplicateRemoval.hxx  ACTSGeometryIdMappingTool.hxx  ACTSProcBase.hxx  ACTSSeededCKFTrackingProc.hxx  ACTSSeedingProc.hxx  ACTSTruthCKFTrackingProc.hxx  ACTSTruthTrackingProc.hxx  Defines.hxx  GeometryContainers.hxx  GeometryIdMappingTool.hxx  GeometryIdSelector.hxx  Helpers.hxx  LUXEDuplicateRemoval.hxx  LUXEEstimateTrackParamsFromSeed.hpp  LUXESeedFilter.hpp  LUXESeedFilter.ipp  LUXESeedfinder.hpp  LUXESeedfinder.ipp  MeasurementCalibrator.hxx  SeedSpacePoint.hxx  SourceLink.hxx  TrackTruthProc.hxx
data/: CMakeLists.txt  LUXETrackerAsEndcap.root  MuColl_v1_mod0.root  material-maps.json
example/: CMakeLists.txt  actsckf_steer.xml  actsseed_seed0_steer.xml  actsseed_seed1_steer.xml  actsseed_seed2_steer.xml  actsseed_steer.xml  actsseedckf_seed0_steer.xml  actsseedckf_seed1_steer.xml  actsseedckf_seed2_steer.xml  actsseedckf_steer.xml  actstracking_steer.xml  actstruth_steer.xml  actstruthckf_steer.xml
src/: ACTSCKFTrackingProc.cxx  ACTSDetectorLoaderProc.cxx  ACTSDuplicateRemoval.cxx  ACTSGeometryIdMappingTool.cxx  ACTSProcBase.cxx  ACTSSeededCKFTrackingProc.cxx  ACTSSeedingProc.cxx  ACTSTruthCKFTrackingProc.cxx  ACTSTruthTrackingProc.cxx  GeometryIdMappingTool.cxx  GeometryIdSelector.cxx  Helpers.cxx  LUXEDuplicateRemoval.cxx  TrackTruthProc.cxx  config.h.in
